RESOLVED FIXED173318
[Win] WebKit fails to paint the bottom lines of the window at 125% scale.
https://bugs.webkit.org/show_bug.cgi?id=173318
Summary [Win] WebKit fails to paint the bottom lines of the window at 125% scale.
Per Arne Vollan
Reported 2017-06-13 09:20:41 PDT
With some window frame sizes, there will be unpainted lines at the bottom of the WebView.
Attachments
Patch (1.83 KB, patch)
2017-06-13 09:40 PDT, Per Arne Vollan
no flags
Patch (2.06 KB, patch)
2017-06-14 03:52 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-06-13 09:40:39 PDT
Per Arne Vollan
Comment 2 2017-06-13 09:41:43 PDT
Per Arne Vollan
Comment 3 2017-06-13 10:34:44 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-06-13 11:03:20 PDT
Comment on attachment 312780 [details] Patch Clearing flags on attachment: 312780 Committed r218186: <http://trac.webkit.org/changeset/218186>
WebKit Commit Bot
Comment 5 2017-06-13 11:03:21 PDT
All reviewed patches have been landed. Closing bug.
Per Arne Vollan
Comment 6 2017-06-14 03:52:54 PDT
Reopening to attach new patch.
Per Arne Vollan
Comment 7 2017-06-14 03:52:56 PDT
Per Arne Vollan
Comment 8 2017-06-14 03:53:38 PDT
(In reply to Per Arne Vollan from comment #7) > Created attachment 312882 [details] > Patch Additional fix.
Per Arne Vollan
Comment 9 2017-06-14 07:46:20 PDT
Comment on attachment 312882 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 10 2017-06-14 08:15:26 PDT
Comment on attachment 312882 [details] Patch Clearing flags on attachment: 312882 Committed r218256: <http://trac.webkit.org/changeset/218256>
WebKit Commit Bot
Comment 11 2017-06-14 08:15:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.